# digital_darling

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
routers/: auth.py  decode.py  payments.py
services/: ai.py  beta.py  cache.py  supabase_client.py
static/: manifest.json  sw.js
templates/: base.html  decode.html  history.html  index.html  pricing.html  privacy.html  profile.html  refund.html  terms.html
templates/partials/: error.html  paywall.html  result.html
