[project]
name = "digital-darling"
version = "1.0.0"
description = "AI Relationship Chat Analyst"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic-settings>=2.2.1",
    "supabase>=2.4.0",
    "openai>=1.14.0",
    "razorpay>=1.4.1",
    "slowapi>=0.1.9",
    "cachetools>=5.3.3",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
]

[tool.uv]
dev-dependencies = []
